--- a/.github/workflows/pytest_workflow.yaml
+++ b/.github/workflows/pytest_workflow.yaml
@@ -1,14 +1,15 @@
-name: Pytest
+name: Tests
 
-on: [push]
+on: [ push ]
 
 jobs:
-  build:
+  build-and-test:
+    name: Build and test
 
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: [ "3.10" ]
 
     steps:
       - uses: actions/checkout@v3
