--- a/.github/workflows/pytest_workflow.yaml
+++ b/.github/workflows/pytest_workflow.yaml
@@ -4,7 +4,7 @@ on: [ push ]
 
 jobs:
   build-and-test:
-    name: Build and test
+    name: build and test
 
     runs-on: ubuntu-latest
     strategy:
