--- a/.github/workflows/black_workflow.yaml
+++ b/.github/workflows/black_workflow.yaml
@@ -1,7 +1,7 @@
 name: Code Formatting
 on: [ pull_request ]
 jobs:
-  linter_name:
+  black:
     name: python / black formatter
     runs-on: ubuntu-latest
     steps:
