--- a/.github/workflows/pytest_workflow.yaml
+++ b/.github/workflows/pytest_workflow.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
-          pip install -r requirements.txt
+          pip install poetry
+          poetry install
       - name: Test with pytest
         run: |
-          pytest
+          poetry run pytest
