--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ scrape = 'subjectflow_backend.scraper.scraper:scrape'
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pymongo = {extras = ["srv"], version = "^4.3.3"}
+pymongo = {extras = ["all"], version = "^4.3.3"}
 pydantic = "^1.10.6"
 fastapi = {extras = ["all"], version = "^0.95.0"}
 requests = "^2.28.2"
